--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -46,6 +46,10 @@
           <img src="../../../assets/icons/app.svg" class="gridImg" (click)="openStaffBenefit()">
           <div class="textTitle h5">Staff Benefits</div>
         </div>
+        <div class="col col-md-3 shadow p-3 mb-5 bg-white rounded item-grid">
+          <img src="../../../assets/icons/coupon.svg" class="gridImg" (click)="openCoupon()">
+          <div class="textTitle h5">Coupon</div>
+        </div>
       </div>
     </ng-container>
     <ng-container *ngIf="roleId > 1">
