--- a/src/app/dialogs/coupon-view/coupon-view.component.html
+++ b/src/app/dialogs/coupon-view/coupon-view.component.html
@@ -1,36 +1,102 @@
 <p class="h5">
   Coupon management
 </p>
-<mat-divider class="mt-3 mb-3"></mat-divider>
-<form [formGroup]="couponForm">
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="discount_code">Coupon code</label>
-      <input type="text" class="form-control" id="discount_code" placeholder="Coupon code"
-        formControlName="discount_code" required>
-    </div>
-    <div class="form-group col-md-6">
-      <label for="discount_description">Description</label>
-      <input type="text" class="form-control" id="discount_description" placeholder="Description"
-        formControlName="discount_description" required>
-    </div>
+<mat-divider class="mt-3"></mat-divider>
+<mat-horizontal-stepper #stepper>
+  <mat-step [stepControl]="couponForm">
+    <form [formGroup]="couponForm">
+      <ng-template matStepLabel>Create new Coupon</ng-template>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="discount_code">Coupon code</label>
+          <input type="text" class="form-control" id="discount_code" placeholder="Coupon code"
+            formControlName="discount_code" required>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="discount_description">Description</label>
+          <input type="text" class="form-control" id="discount_description" placeholder="Description"
+            formControlName="discount_description" required>
+        </div>
 
-    <div class="form-group col-md-6">
-      <label for="discount_valid_from">Valid From</label>
-      <input type="date" class="form-control" id="discount_valid_from" formControlName="discount_valid_from" required>
+        <div class="form-group col-md-6">
+          <label for="discount_valid_from">Valid From</label>
+          <input type="date" class="form-control" id="discount_valid_from" formControlName="discount_valid_from"
+            required>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="discount_valid_thru">Valid Thru</label>
+          <input type="date" class="form-control" id="discount_valid_thru" formControlName="discount_valid_thru"
+            required>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="discount_limit_time">Coupon count usage per day</label>
+          <input type="number" class="form-control text-right" id="discount_limit_time"
+            formControlName="discount_limit_time" required>
+        </div>
+        <div class="form-group col-md-6" style="position: relative; margin-top: 32px;">
+          <button mat-raised-button color="primary" (click)="createCoupon()" matStepperNext
+            style="width: 263px;">{{ btnText }}</button>
+        </div>
+      </div>
+    </form>
+    <mat-divider class="mt-1 mb-3"></mat-divider>
+  </mat-step>
+  <mat-step [stepControl]="couponForm">
+    <form [formGroup]="couponDetails">
+      <ng-template matStepLabel>Coupon details</ng-template>
+      <div class="form-row">
+        <div class="form-group col-md-6">
+          <label for="discountId">Coupon id</label>
+          <input type="text" class="form-control" id="discountId" readonly placeholder="Coupon code"
+            formControlName="discountId" required>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="foodId">Food name</label>
+          <select class="form-control" id="foodId" formControlName="foodId" required (change)="selectedFood($event)">
+            <option value="-1" disabled>------</option>
+            <option value="{{ food.id }}" *ngFor="let food of foods">{{ food.food_name }}</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="subfoodId">Subfood name</label>
+          <select class="form-control" id="subfoodId" formControlName="subfoodId" required>
+            <option value="-1" disabled>------</option>
+            <option value="{{ subFood.sfId }}" *ngFor="let subFood of subFoods">{{ subFood.subFoodName }}</option>
+          </select> </div>
+        <div class="form-group col-md-6">
+          <label for="discount">Discount Amount</label>
+          <input type="number" class="form-control text-right" id="discount" placeholder="Subfood name"
+            formControlName="discount" required>
+        </div>
+        <div class="form-group col-md-6">
+          <label for="currencyId">Currency</label>
+          <select class="form-control" id="currencyId" formControlName="currencyId" required>
+            <option value="-1">------</option>
+            <option value="{{ currency.id }}" *ngFor="let currency of currencies">{{ currency.currency_name}}</option>
+          </select>
+        </div>
+        <div class="form-group col-md-6" style="position: relative; margin-top: 32px;">
+          <button mat-raised-button color="primary" (click)="createCouponDetail()"
+            style="width: 165px;">{{ btnText }}</button>
+          <button mat-raised-button color="warn" (click)="closeDialog() "
+            style="width: 165px; margin-left: 10px;">Close</button>
+        </div>
+
+      </div>
+    </form>
+    <mat-divider class="mt-1 mb-3"></mat-divider>
+    <div class="row">
+      <table class="table">
+        <thead>
+          <th>Coupon code</th>
+          <th>Food name</th>
+          <th>Discount</th>
+          <th>Valid From</th>
+          <th>Valid Thru</th>
+          <th>Valid</th>
+          <th>Enable</th>
+        </thead>
+      </table>
     </div>
-    <div class="form-group col-md-6">
-      <label for="discount_valid_thru">Valid Thru</label>
-      <input type="date" class="form-control" id="discount_valid_thru" formControlName="discount_valid_thru" required>
-    </div>
-    <div class="form-group col-md-6">
-      <label for="discount_limit_time">Coupon count usage per day</label>
-      <input type="number" class="form-control text-right" id="discount_limit_time"
-        formControlName="discount_limit_time" required>
-    </div>
-    <div class="form-group col-md-6" style="position: relative; margin-top: 32px;">
-      <button mat-raised-button color="primary" style="width: 263px;">Create</button>
-    </div>
-  </div>
-</form>
-<mat-divider class="mt-1 mb-3"></mat-divider>
+  </mat-step>
+</mat-horizontal-stepper>
