--- a/src/app/pages/pos/pos.component.css
+++ b/src/app/pages/pos/pos.component.css
@@ -18,11 +18,12 @@
   opacity: 0.8;
   width: 90%;
   text-align: center;
-  height: 30px;
-  vertical-align: middle;
-  background-color: rgb(228, 241, 247);
-  color: rgb(53, 48, 48);
+  vertical-align: bottom;
+  height: 100hv;
+  background-color: rgb(247, 242, 242);
+  color: rgb(7, 7, 7);
   opacity: 0.7;
+  font-weight: bold;
 }
 .pricetag {
   position: absolute;
@@ -52,7 +53,7 @@
   text-align: center;
 }
 .main-container {
-  height: 100%;
+  height: 80vh;
   overflow: auto;
   width: 100%;
 }
