--- a/src/app/dialogs/coupon-view/coupon-view.component.html
+++ b/src/app/dialogs/coupon-view/coupon-view.component.html
@@ -123,8 +123,8 @@
             </td>
             <ng-template #unEnable>
               <td class="text-center">
-                <img src="../../../assets/icons/baseline-remove-24px.svg"
-                  (click)="toggleEnable(displayCoupon.discount_valid)" style="max-width: 20px;cursor: pointer;">
+                <img src="../../../assets/icons/baseline-remove-24px.svg" (click)="toggleEnable(displayCoupon.enabled)"
+                  style="max-width: 20px;cursor: pointer;">
               </td>
             </ng-template>
 
