--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -71,13 +71,56 @@
           <div class="col-md-4 col-xl-3">
             <div class="card bg-c-blue order-card">
               <div class="card-block">
-                <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດການຂາຍຕາມພະນັກງານ</div>
+                <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດການຂາຍຕາມພະນັກງານ
+                </div>
                 <mat-divider></mat-divider>
                 <br />
                 <ng-container *ngFor="let summaryReportsUser of summaryReportsUsers">
                   <div class="row">
                     <div class="col col-md-6 h5 text-left">{{ summaryReportsUser.username }}</div>
                     <div class="col col-md-6 h5 text-right">{{ summaryReportsUser.grandTotal |number }} ກິບ</div>
+                  </div>
+                </ng-container>
+              </div>
+            </div>
+          </div>
+
+          <!--
+          Old System Report
+          -->
+          <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card">
+              <div class="card-block">
+                <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ຂອງວັນ {{ currentDate |date: 'dd-MMM-yyyy'}}
+                  legacy
+                </div>
+                <mat-divider></mat-divider>
+                <br />
+                <ng-container *ngFor="let summaryReport of summaryReports_letterp">
+                  <div class="row">
+                    <div class="col col-md-6 h5">ຍອດການຂາຍ</div>
+                    <div class="col col-md-6 h5 text-right">{{ summaryReport.GrandTotal |number }} ກິບ</div>
+                    <div class="col col-md-6 h5">ລວມຕົ້ນທຶນ</div>
+                    <div class="col col-md-6 h5 text-right">{{ summaryReport.total_cost |number }} ກິບ</div>
+                    <div class="col col-md-6 h5">ກຳໄລສຸທິ</div>
+                    <div class="col col-md-6 h5 text-right">{{ summaryReport.profit |number }} ກິບ</div>
+                  </div>
+                </ng-container>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card">
+              <div class="card-block">
+                <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ຕາມຄົວ</div>
+                <mat-divider></mat-divider>
+                <br />
+                <ng-container *ngFor="let summaryReportsKitchen of summaryReports_kitchen_letterp ; let i = index">
+                  <div class="row">
+                    <div class="col col-md-4 h5 text-left">{{ summaryReportsKitchen.kitchen_name }}</div>
+                    <div class="col col-md-4 h5 text-center">{{ summaryReportsKitchen.total_cost |number}}</div>
+                    <div class="col col-md-4 h5 text-right text-nowrap">{{ summaryReportsKitchen.GrandTotal |number }}
+                      ກິບ</div>
                   </div>
                 </ng-container>
               </div>
