--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -92,12 +92,12 @@
             <div class="card bg-c-blue order-card">
               <div class="card-block">
                 <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ຂອງວັນ {{ currentDate |date: 'dd-MMM-yyyy'}}
-                  legacy
+                  ລະບົບເກົ່າ
                 </div>
                 <mat-divider></mat-divider>
                 <br />
                 <ng-container *ngFor="let summaryReport of summaryReports_letterp">
-                  <div class="row">
+                  <div class="row" *ngIf="summaryReport.GrandTotal">
                     <div class="col col-md-6 h5">ຍອດການຂາຍ</div>
                     <div class="col col-md-6 h5 text-right">{{ summaryReport.GrandTotal |number }} ກິບ</div>
                     <div class="col col-md-6 h5">ລວມຕົ້ນທຶນ</div>
@@ -139,7 +139,7 @@
       </ng-container>
     </div>
     <div class="row">
-      <div class="col col-md-4 col-sm-12">
+      <div class="col col-md-12 col-sm-12">
         <div class="card">
           <div class="card-header text-center">
             <span class="text-center h4">ແຈ້ງການ</span>
@@ -167,38 +167,6 @@
             </ul>
           </div>
         </div>
-      </div>
-      <div class="col col-md-4 col-sm-12 col-xs-12">
-        <div class="card">
-          <div class="card-header text-center">
-            <span class="text-center h4">ຂໍ້ຄວາມ</span>
-          </div>
-          <div class="list-group">
-            <div class="card-body" style="max-height: 200px;overflow: auto;">
-              <a class="list-group-item list-group-item-action flex-column align-items-start"
-                *ngFor="let message of messages | async">
-                <div class="d-flex w-100 justify-content-between">
-                  <h5 class="mb-1">{{ message.userName }}</h5>
-                  <small class="text-muted">{{ message.dateTime.toDate() | date: 'dd-MMM-yyyy H:mm:ss' }}</small>
-                </div>
-                <p class="mb-1">{{ message.message }}</p>
-                <small class="text-muted">Letter'P Private messaging</small>
-              </a>
-            </div>
-          </div>
-          <div class="card-footer">
-            <form [formGroup]="messageForm">
-              <div class="form-group">
-                <label for="formGroupExampleInput">Message</label>
-                <input type="text" autocomplete="off" class="form-control" id="formGroupExampleInput"
-                  placeholder="Type a message and enter to send" formControlName="message" (keyup)="sendMsg($event)">
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-      <div class="col col-md-4 col-sm-12">
-
       </div>
     </div>
   </mat-card-content>
