--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -126,6 +126,43 @@
               </div>
             </div>
           </div>
+
+
+          <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card">
+              <div class="card-block">
+                <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍ ພະນັກງານ</div>
+                <mat-divider></mat-divider>
+                <br />
+                <ng-container *ngFor="let staff of summaryReports_staff_letterp ; let i = index">
+                  <div class="row">
+                    <div class="col col-md-4 h5 text-left">{{ staff.username }}</div>
+                    <div class="col col-md-4 h5 text-right">{{ staff.quantity |number }}</div>
+                    <div class="col col-md-4 h5 text-right text-nowrap">{{ staff.GrandTotal |number }}
+                      ກິບ</div>
+                  </div>
+                </ng-container>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card">
+              <div class="card-block">
+                <div class="m-b-20 h4" style="margin-bottom: 20px;">ຍອດຂາຍລາຍການອາຫານຍອດ</div>
+                <mat-divider></mat-divider>
+                <br />
+                <ng-container *ngFor=" let foods of summaryReports_Foods_letterp; let i = index">
+                  <div class="row">
+                    <div class="col col-md-6 h6 text-left">{{ foods.food_name }}</div>
+                    <div class="col col-md-1 h6 text-right">{{ foods.quantity | number }}</div>
+                    <div class="col col-md-5 h6 text-right">{{ foods.total_price |number }} ກິບ</div>
+                  </div>
+                </ng-container>
+              </div>
+            </div>
+          </div>
+
         </div>
       </ng-container>
       <ng-container *ngIf="roleId > 1">
