test firebase backend

--- a/src/app/pages/test-pages/test-pages.component.html
+++ b/src/app/pages/test-pages/test-pages.component.html
@@ -1,5 +1,5 @@
 <div class="row mt-3">
   <div class="col col-12">
-    <button mat-raised-button color="warn" style="width: 200px;">Test</button>
+    <button mat-raised-button color="warn" style="width: 200px;" (click)="testCommand()">Test</button>
   </div>
 </div>
