update purchase disable persistence

--- a/src/app/dialogs/add-purchase/add-purchase.component.html
+++ b/src/app/dialogs/add-purchase/add-purchase.component.html
@@ -73,7 +73,7 @@
                 formControlName="price" (keyup)="totalCalculate()" required>
             </div>
             <div class="col-md-4">
-              <label for="billQuantity">ຈຳນວນຕາມຫົວໜ່ວຍ</label>
+              <label for="billQuantity">ຈຳນວນ</label>
               <input type="number" class="form-control  text-right" id="billQuantity" placeholder="billQuantity"
                 formControlName="billQuantity" (keyup)="totalCalculate()" required>
             </div>
