--- a/src/app/pages/bom/bom.component.html
+++ b/src/app/pages/bom/bom.component.html
@@ -16,16 +16,16 @@
 
     <div>
       <table class="table table-bordered">
-        <thead class="thead-light">
+        <thead class="thead-dark">
           <tr>
-            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">#</th>
-            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ອາຫານ</th>
-            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ຕົ້ນທືນ</th>
-            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ລາຄາຂາຍ</th>
-            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ປະເພດ</th>
-            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ຄົວ</th>
-            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ສ່ວນປະກອບ</th>
-            <th scope="col" class="text-center font-weight-bold" style="font-size: 1.5em;">ແກ້ໄຂ</th>
+            <th scope="col" class="text-center font-weight-bold">#</th>
+            <th scope="col" class="text-center font-weight-bold">ອາຫານ</th>
+            <th scope="col" class="text-center font-weight-bold">ຕົ້ນທືນ</th>
+            <th scope="col" class="text-center font-weight-bold">ລາຄາຂາຍ</th>
+            <th scope="col" class="text-center font-weight-bold">ປະເພດ</th>
+            <th scope="col" class="text-center font-weight-bold">ຄົວ</th>
+            <th scope="col" class="text-center font-weight-bold">ສ່ວນປະກອບ</th>
+            <th scope="col" class="text-center font-weight-bold">ແກ້ໄຂ</th>
           </tr>
         </thead>
         <tbody>
