--- a/src/app/dialogs/addbom/addbom.component.html
+++ b/src/app/dialogs/addbom/addbom.component.html
@@ -1,64 +1,20 @@
-<h1 mat-dialog-title>{{ title }}</h1>
+<h1 mat-dialog-title>ເພີມສູດອາຫານ</h1>
+<mat-divider class="mb-4"></mat-divider>
 <form [formGroup]="addBomForm">
   <div class="row">
-    <div class="form-group col-md-3">
-      <label for="food">ອາຫານ</label>
-      <select class="form-control" id="food" required (change)="foodSelectedChange($event.target.value)"
-        formControlName="food">
-        <option value="" disabled>------</option>
-        <option value="{{food.foodId}}" *ngFor="let food of foods | async">{{ food.food_name }}</option>
-      </select>
+    <div class="form-group col-md-4">
+      <label for="bomName">ຊື່ສູດອາຫານ</label>
+      <input type="text" id="bomName" class="form-control" style="width: 100%;" formControlName="bomName" required>
     </div>
-    <div class="form-group col-md-3">
-      <label for="product">Product</label>
-      <select class="form-control" id="product" (change)="productSelectedChange($event.target.value)">
-        <option value="" disabled>------</option>
-        <option value="{{ product.productCode }}" *ngFor="let product of products | async">{{ product.productName }}
-        </option>
-      </select>
+    <div class="form-group col-md-4">
+      <label for="note">ຄຳອະທິບາຍ</label>
+      <input type="text" id="note" class="form-control" style="width: 100%;" formControlName="note" required>
     </div>
-    <div class="form-group col-md-3">
-      <label for="Quantity">ຈຳນວນ</label>
-      <input type="number" id="Quantity" class="form-control" placeholder="Quantity" required
-        (change)="quantityChange($event.target.value)">
-    </div>
-    <div class="form-group col-md-3">
-      <button mat-raised-button color="primary" style="margin-top: 32px;width: 100%;" (click)="addTolist()">Add</button>
-    </div>
-  </div>
-  <div class="card">
-    <div class="card-header text-center">
-      Solution
-    </div>
-    <div class="card-body">
-      <table class="table">
-        <thead>
-          <th class="text-center">#</th>
-          <th class="text-left">Product Name</th>
-          <th class="text-center">Quantity</th>
-          <th class="text-center">Unit</th>
-          <th class="text-center">remove</th>
-        </thead>
-        <tbody>
-          <tr *ngFor="let product of productsBuffer;let i = index">
-            <td class="text-center">{{ i + 1 }}</td>
-            <td class="text-left">{{ product.productName }}</td>
-            <td class="text-center">{{ product.bom_quantity |number}}</td>
-            <td class="text-center">{{ product.unit }}</td>
-            <td class="text-center">
-              <img src="../../../assets/icons/baseline-delete-24px.svg" style="cursor: pointer;"
-                (click)="removeItem(product)">
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="card-footer">
-      <div class="text-right">
-        <button mat-raised-button color="primary" style="width: 200px;"
-          (click)="saveBom()">{{ saveButtonTitle }}</button>
+    <div class="form-group col-md-4">
+      <div class="text-center">
+        <button mat-raised-button color="primary" style="width: 100px;top:32px;" (click)="createBom()">ບັນທຶກ</button>
       </div>
     </div>
   </div>
-
 </form>
+<mat-divider class="mt-4"></mat-divider>
